--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"@fortawesome/fontawesome-svg-core": "^1.2.36",
 		"@fortawesome/free-solid-svg-icons": "^5.15.4",
 		"@fortawesome/react-fontawesome": "^0.1.16",
+		"@reduxjs/toolkit": "^1.7.1",
 		"@testing-library/jest-dom": "^5.14.1",
 		"@testing-library/react": "^12.0.0",
 		"@testing-library/user-event": "^13.2.1",
@@ -16,7 +17,7 @@
 		"@types/react-dom": "^17.0.9",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
-		"react-router-dom": "^6.2.1",
+		"react-redux": "^7.2.6",
 		"react-scripts": "5.0.0",
 		"styled-components": "^5.3.3",
 		"typescript": "^4.4.2",
