--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
 		"@types/react-dom": "^17.0.9",
 		"clsx": "^1.1.1",
 		"firebase": "^9.6.1",
+		"formik": "^2.2.9",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-redux": "^7.2.6",
 		"react-scripts": "5.0.0",
 		"styled-components": "^5.3.3",
 		"typescript": "^4.4.2",
-		"web-vitals": "^2.1.0"
+		"web-vitals": "^2.1.0",
+		"yup": "^0.32.11"
 	},
 	"scripts": {
 		"start": "react-scripts start",
